--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,24 @@
 node_modules/
 
-# 数据库文件（绝对不能提交到 git！）
+# 数据库文件（绝对不能提交！）
 *.db
 *.db-journal
 prisma/dev.db
 prisma/prisma/dev.db
 
-# 环境变量（包含敏感信息）
+# 环境变量
 .env
 .env.local
 .env.production
-.env.*.local
 
 # 上传文件
 uploads/
 
-# PM2 相关
+# PM2 配置
 pm2-juben.config.json
 ecosystem.config.json
 
-# 备份文件
+# 备份
 backups/
 .deploy_backup/
 
@@ -29,8 +28,3 @@ out/
 
 # 日志
 *.log
-npm-debug.log*
-
-# 系统文件
-.DS_Store
-Thumbs.db
