fix: 修复部署错误 - 添加 uploads 目录的组件文件到版本控制
- 修改 .gitignore，使用 /uploads/ 替代 uploads/，只忽略根目录的上传文件夹
- 添加 ClientWrapper.tsx、DeleteButton.tsx 和 PreviewImage.tsx 到版本控制
- 修复了在服务器部署时找不到 './ClientWrapper' 模块的问题

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ prisma/dev.db
 .env.local
 .env.production
 
-# 上传文件
-uploads/
+# 上传文件（只忽略根目录的 uploads 文件夹，不忽略代码目录 app/my/uploads）
+/uploads/
 
 # PM2 配置
 pm2-juben.config.json
